--- a/kirana-frontend/package.json
+++ b/kirana-frontend/package.json
@@ -24,9 +24,11 @@
     "expo-haptics": "~15.0.7",
     "expo-image": "~3.0.8",
     "expo-linking": "~8.0.8",
+    "expo-local-authentication": "~17.0.7",
     "expo-navigation-bar": "~5.0.8",
     "expo-notifications": "~0.32.11",
     "expo-router": "~6.0.5",
+    "expo-secure-store": "^15.0.7",
     "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
     "expo-symbols": "~1.0.7",
@@ -43,8 +45,7 @@
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-web": "~0.21.0",
-    "react-native-worklets": "0.5.1",
-    "expo-local-authentication": "~17.0.7"
+    "react-native-worklets": "0.5.1"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
