--- a/kirana-frontend/package.json
+++ b/kirana-frontend/package.json
@@ -15,11 +15,11 @@
     "@react-native-async-storage/async-storage": "2.2.0",
     "@react-native-community/netinfo": "11.4.1",
     "@react-navigation/bottom-tabs": "^7.4.0",
-    "@react-navigation/drawer": "^7.5.8",
+    "@react-navigation/drawer": "^7.5.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
     "@tanstack/react-query": "^5.89.0",
-    "expo": "54.0.7",
+    "expo": "~54.0.10",
     "expo-constants": "~18.0.8",
     "expo-font": "~14.0.8",
     "expo-haptics": "~15.0.7",
@@ -28,7 +28,7 @@
     "expo-local-authentication": "~17.0.7",
     "expo-navigation-bar": "~5.0.8",
     "expo-notifications": "~0.32.11",
-    "expo-router": "~6.0.5",
+    "expo-router": "~6.0.8",
     "expo-secure-store": "^15.0.7",
     "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
