--- a/kirana-backend/package.json
+++ b/kirana-backend/package.json
@@ -18,8 +18,10 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-rate-limit": "^8.1.0",
+    "express-validator": "^7.2.1",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.2",
     "mysql2": "^3.10.0"
   },
   "devDependencies": {
