--- a/kirana-frontend/package.json
+++ b/kirana-frontend/package.json
@@ -14,6 +14,7 @@
     "@expo/vector-icons": "^15.0.2",
     "@react-native-async-storage/async-storage": "2.2.0",
     "@react-native-community/netinfo": "11.4.1",
+    "@react-native-picker/picker": "2.11.1",
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/drawer": "^7.5.0",
     "@react-navigation/elements": "^2.6.3",
@@ -21,9 +22,11 @@
     "@tanstack/react-query": "^5.89.0",
     "expo": "~54.0.10",
     "expo-constants": "~18.0.8",
+    "expo-document-picker": "~14.0.7",
     "expo-font": "~14.0.8",
     "expo-haptics": "~15.0.7",
     "expo-image": "~3.0.8",
+    "expo-image-picker": "~17.0.8",
     "expo-linking": "~8.0.8",
     "expo-local-authentication": "~17.0.7",
     "expo-navigation-bar": "~5.0.8",
