--- a/kirana-frontend/tsconfig.json
+++ b/kirana-frontend/tsconfig.json
@@ -2,10 +2,9 @@
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
     "strict": true,
+    "baseUrl": ".",                     // Important for path aliases
     "paths": {
-      "@/*": [
-        "./*"
-      ]
+      "@/*": ["./*"]                    // Makes '@/context/AuthContext' work
     }
   },
   "include": [
